syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "HomeBlockArrangementInfo.proto";
import "HomeFurnitureData.proto";
import "Vector.proto";

message HomeSceneArrangementInfo {
	uint32 scene_id = 1;
	repeated HomeBlockArrangementInfo block_arrangement_info_list = 2;
	bool is_set_born_pos = 3;
	Vector born_pos = 4;
	Vector born_rot = 5;
	repeated HomeFurnitureData door_list = 7;
	repeated HomeFurnitureData stair_list = 8;
	HomeFurnitureData main_house = 9;
	uint32 comfort_value = 10;
	Vector djinn_pos = 11;
	uint32 tmp_version = 12;
	uint32 CNLMNOEGKME = 13;
}
